# Cadence

./: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.tsx  AppShell.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_add_is_today.sql  0003_add_due.sql
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/db/: migrations.rs  mod.rs
src/components/: BlockCard.tsx  Checkbox.tsx  Chip.tsx  CompactAdd.tsx  ConfirmationDialog.tsx  ContextMenu.tsx  DatePicker.test.tsx  DatePicker.tsx  DroppableSlot.tsx  LabelInput.tsx  Modal.tsx  NowLine.tsx  Ring.tsx  SettingsModal.tsx  TaskComposer.tsx  TaskListView.tsx  TaskRow.tsx  TimeGrid.tsx  UnscheduledTasks.tsx
src/components/TaskComposer/: ChatMessage.tsx  DraftBasket.tsx  PlanWithAITab.tsx  QuickAddTab.tsx  RefineTab.tsx  SuggestionCard.tsx
src/components/calendar/: DayPeek.tsx  MiniDayRail.tsx
src/components/dashboard/: BacklogBelt.test.tsx  BacklogBelt.tsx  Header.tsx  (+3 more)
src/hooks/: useCalendarDnD.ts  useHistoryState.ts  usePlannerStore.ts  useTasks.ts  useTimer.ts
src/lib/: export.ts  llm.ts  parsing.ts  sensors.ts  time.ts  timeGrid.ts  utils.ts
src/pages/: CalendarPage.tsx  FocusPage.tsx  HomeDashboard.tsx  HomePage.tsx  InsightsPage.tsx  NotesPage.tsx  SettingsPage.tsx  TasksPage.tsx
src/screens/: Planner.tsx
src/state/: planner.test.ts  planner.ts
src/styles/: tokens.css
src/types/: composer.ts  index.ts
(+9 files in other folders)
